# 5-lang-server

./: .gitignore  README.md
c++/: a.out  crow-fileupload.h  crow_all.h  main.c++
go/: Makefile  dist  go.mod  main.go
nodejs/: package-lock.json  package.json  server.js
python/fus/: manage.py
python/fus/fus/: asgi.py  settings.py  urls.py  wsgi.py
python/fus/server/: urls.py  views.py
rust/: Cargo.toml
rust/src/: main.rs
rust/uploads/: pepe.hs
serverChallenger/: Cargo.toml  results.txt
serverChallenger/src/: main.rs
