[package]
name = "httpServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.5.0"
actix-web = "4"
futures-util = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tokio = {version = "1.28.0", features = ["fs"]}
